# percona-server-mongodb

./: .bazelrc  .gitignore  CONTRIBUTING.rst  MONGO_TOOLS_TAG_VERSION  README.md  README.third_party.md  SConstruct  logv2analyzer.yaml
.github/workflows/: logv2analyzer.yml
bazel/: utils.bzl
bazel/config/: BUILD.bazel  configs.bzl
bazel/toolchains/: mongo_toolchain_version.bzl
buildscripts/: setup_multiversion_mongodb.py
buildscripts/resmokeconfig/suites/: OWNERS.yml  aggregation_tde_cbc.yml  aggregation_tde_gcm.yml  audit.yml  backup.yml  backup_tde_cbc.yml  backup_tde_gcm.yml  core_tde_cbc.yml  core_tde_gcm.yml  external_auth.yml  knobs.yml  ldapauthz.yml  oidc.yml  percona_no_passthrough_with_mongod.yml  ratelimit.yml  redaction.yml  replica_sets_tde_cbc.yml  replica_sets_tde_gcm.yml  sharding_tde_cbc.yml  sharding_tde_gcm.yml  ssl.yml  tde_cbc.yml  tde_gcm.yml  telemetry.yml
buildscripts/smoke_config/: audit.yaml
docs/: setParameter_tuning.md
docs/audit/: README.md
docs/backup/: Universal.md
docs/external_authentication/: README.md  client_and_server_setup.md  environment_setup.md  quick_build_and_test.md
docs/inmemory/: README.md
docs/ratelimit/: README.md
etc/: oidc_idp_mock_cert_installed.yml
jstests/audit/: _audit_helpers.js  audit_add_shard.js  audit_authenticate.js  audit_authz_application_message.js  audit_authz_command.js  audit_authz_current_op.js  audit_authz_delete.js  audit_authz_find.js  audit_authz_get_more.js  audit_authz_insert.js  audit_authz_kill_op.js  audit_authz_update.js  audit_config.js  audit_create_collection.js  audit_create_database.js  audit_create_index.js  audit_drop_collection.js  audit_drop_database.js  audit_drop_index.js  audit_enable_sharding.js  audit_log_application_message.js  audit_log_rotate.js  audit_log_rotate_on_start.js  audit_no_createdb_restart.js  audit_remove_shard.js  audit_rename_collection.js  audit_replset_reconfig.js  audit_shard_collection.js  audit_shutdown.js  audit_system_users.js  audit_system_users_authz.js
jstests/auth/: sasl_mechanism_discovery.js
jstests/auth/lib/: commands_lib.js
jstests/backup/: backup_simple.js
jstests/core/views/: views_all_commands.js
jstests/core_sharding/ddl/: OWNERS.yml
jstests/external_auth/: README.md
jstests/ldapauthz/: _check.js  ldapauthz_memberof.js  ldapauthz_userRoles_with_dn.js
jstests/libs/: backup_utils.js  python.js
jstests/libs/config_files/: audit_config_basic.yaml  audit_config_destination_empty.yaml  audit_config_fork.yaml
jstests/noPassthrough/: aggregation_backup_cursor.js  profile_filter.js  umask.js
jstests/oidc/: auth_issuers_no_human_flows.js  auth_jwks_cached.js  auth_jwks_changed.js  auth_jwks_polling.js  auth_jwks_quiesce_period.js  auth_jwt.js  auth_log_claims.js  auth_multiple_audiences.js  auth_multiple_users_parallel.js  auth_no_claims.js  auth_principal_name_mismatch.js  auth_privileges.js  auth_time_iat.js  auth_token_payload.js  auth_with_token.js  build_info.js  command_list_keys.js  command_refresh_keys.js  mongodb_idp_https_conversation.js  oidc_auth.js  oidc_auth_absolute_claims.js  oidc_auth_claims.js  oidc_auth_issuers_no_human_flows.js  oidc_auth_jwks_cached.js  oidc_auth_jwks_changed.js  oidc_auth_jwks_polling.js  oidc_auth_jwt.js  oidc_auth_log_claims.js  oidc_auth_multiple_audiences.js  oidc_auth_multiple_issuers.js  oidc_auth_multiple_users.js  oidc_auth_multiple_users_parallel.js  oidc_auth_no_claims.js  oidc_auth_principal_name.js  oidc_auth_principal_name_mismatch.js  oidc_auth_privileges.js  oidc_auth_refresh_token.js  oidc_auth_request_scopes.js  oidc_auth_session_expired.js  oidc_auth_time_iat.js  (+13 more)
jstests/oidc/lib/: README.md  ca_oidc_idp.crt  ca_oidc_idp.pem  (+3 more)
jstests/ratelimit/: ratelimit_command_line.js
jstests/redaction/: redaction_mongos_command_line.js  redaction_mongos_config.js  redaction_mongos_setparameter.js
jstests/replsets/: all_commands_downgrading_to_upgraded.js  db_reads_while_recovering_all_commands.js  fcbis-replication.js  fcbis_backup_cursor_extend.js
jstests/sharding/: database_versioning_all_commands.js  read_write_concern_defaults_application.js  safe_secondary_reads_drop_recreate.js  safe_secondary_reads_single_migration_suspend_range_deletion.js  safe_secondary_reads_single_migration_waitForDelete.js
jstests/ssl/: ssl_fips.js
jstests/telemetry/: _telemetry_helpers.js  telemetry_auth.js  telemetry_replicaset.js  telemetry_sharded.js
percona-packaging/conf/: percona-server-mongodb-enable-auth.sh
percona-packaging/debian/: rules
percona-packaging/manpages/: mongod.1  mongos.1
percona-packaging/redhat/: percona-server-mongodb.spec.template
percona-packaging/scripts/: psmdb_builder.sh
site_scons/site_tools/: integrate_bazel.py
src/mongo/: BUILD.bazel  SConscript  config.h.in  mongo_config_header.py
src/mongo/db/audit/: BUILD.bazel  SConscript  audit.cpp  audit_options.cpp  audit_options.h  audit_options_test.cpp
src/mongo/db/auth/oidc/: BUILD.bazel  SConscript  arch.puml  match_pattern.h  oidc_commands.cpp  oidc_commands_test.cpp  oidc_identity_providers_registry.cpp  oidc_identity_providers_registry.h  oidc_identity_providers_registry_impl.cpp  oidc_identity_providers_registry_impl.h  oidc_identity_providers_registry_test.cpp  oidc_server_parameters.cpp  oidc_server_parameters.idl  oidc_server_parameters_logger.cpp  oidc_server_parameters_logger.h  oidc_test_fixture.h  user_request_oidc.h  user_request_oidc_test.cpp
src/mongo/db/backup/: BUILD.bazel  SConscript  backup_commands.cpp
src/mongo/db/encryption/: BUILD.bazel  SConscript  encryption_status.cpp  encryption_status_test.cpp  key_id.cpp  key_id.h  key_operations.h  kmip_client.cpp  kmip_exchange.cpp  master_key_provider.cpp  vault_client.cpp  vault_client.h  vault_client_test.cpp
src/mongo/db/ldap/: BUILD.bazel  SConscript  ldap_manager_impl.cpp
src/mongo/db/storage/inmemory/: BUILD.bazel  SConscript
src/mongo/db/telemetry/: BUILD.bazel  SConscript  telemetry_thread_base.cpp  telemetry_thread_base.h  telemetry_thread_d.cpp  telemetry_thread_s.cpp
support-files/ldap-sasl/: README.md
(+175 files in other folders)
