load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")

package(default_visibility = ["//visibility:public"])

idl_generator(
    name = "oidc_server_parameters_gen",
    src = "oidc_server_parameters.idl",
    deps = [
        "//src/mongo/db:basic_types_gen",
    ],
)

mongo_cc_library(
    name = "oidc",
    srcs = [
        "oidc_identity_providers_registry.cpp",
        "oidc_identity_providers_registry_impl.cpp",
        "oidc_server_parameters.cpp",
        "oidc_server_parameters_logger.cpp",
        "oidc_server_parameters_gen",
    ],
    hdrs = [
        "oidc_identity_providers_registry.h",
        "oidc_identity_providers_registry_impl.h",
        "oidc_server_parameters_logger.h",
        "match_pattern.h",
        "//src/mongo/crypto:jwks_fetcher_factory.h",
    ],
    deps = [
        "//src/mongo:base",
        "//src/mongo/crypto:jwt",
        "//src/mongo/crypto:jwt_types",
        "//src/mongo/db:server_base",
        "//src/mongo/util/options_parser"
    ],
)
